--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body {
     width: 100%;
 }
 
-.main-container {
+.main {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -37,7 +37,7 @@ body {
     position: relative;
 }
 
-.main-container::before {
+.main::before {
     content: '';
     position: absolute;
     left: 0;
@@ -47,12 +47,13 @@ body {
     z-index: 0;
 }
 
-.container-info{
+.info{
     width: 80%;
     margin: 0 auto;
     align-items: center;
     justify-content: center;
     background-color: black;
+    opacity: 0.8;
     border-radius: 10px;
 }
 
@@ -89,7 +90,7 @@ body {
     background-color: #fd3e81;
     border-radius: 10px;
     font-size: 15px;
-    cursor: pointer;
+    cursor:pointer;
     transition: all .3s;
 }
 
@@ -116,7 +117,7 @@ body {
     font-weight: bold;
 }
 
-.location .time {
+.location .time{
     font-size: 20px;
     font-weight: bold;
     text-align: center;
